# general

./: .gitignore
VS debug/: debug in VS.txt
g++_compilation/: driver.cpp  driver.ii  driver.s  Состав компилятора g++.txt  Этапы компиляции.txt
vs_qt_project/project/: CMakeLists.txt
vs_qt_project/project/project/: CMakeLists.txt  main.cpp
